crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__where_multiline_trailing_comma.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: "\nt: Traversable,\nf: Applicative,\n"
---
[
    Bound {
        var: Located {
            region: Region {
                start: Position {
                    line: 2,
                    column: 1,
                },
                end: Position {
                    line: 2,
                    column: 2,
                },
            },
            value: "t",
        },
        bounds: [
            Path {
                segments: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 4,
                            },
                            end: Position {
                                line: 2,
                                column: 15,
                            },
                        },
                        value: "Traversable",
                    },
                ],
            },
        ],
    },
    Bound {
        var: Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 1,
                },
                end: Position {
                    line: 3,
                    column: 2,
                },
            },
            value: "f",
        },
        bounds: [
            Path {
                segments: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 4,
                            },
                            end: Position {
                                line: 3,
                                column: 15,
                            },
                        },
                        value: "Applicative",
                    },
                ],
            },
        ],
    },
]
